--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -7,30 +7,93 @@ label{
   width:80%;
   margin-left: 10%;
   background: url(../images/main-search-3.png) no-repeat center bottom; 
-  background-size: 90% 80% ;
+  background-size: 95% 75% ;
 
 }
 #search_box{
   margin-top: 0%;
-  height: 19%;
+  height: 22%;
   width: 80%;
     margin-left:10%;
   /*position: absolute;*/
-  border:3px solid #33ccff ;
+  border:2.5px solid #33ccff ;
     border-radius: 24px;
   background-color: white;
+}
+#search_box form{
+    height: 100%;
+    width: 100%;
+}
+
+.box{
+  width:100%;
+  height: 50%;
+    margin-top: 1%;
+  /*border:2px solid green;*/
 
 }
 
-#results {
+
+.form-group{
+  width:23%;
+  float: left;
+  margin-left: 1%;
+  margin-right: 1%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+.keyword{
+    width:90%;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+.keyword_main{
+    width:90%;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+
+#keywords_Autofill_div{
+  width:85%;
+  float: left;
+
+}
+
+#keywords_button_add{
+  width:15%;
+  float: left;
+
+}
+#keyword_required{
+    display: none;
+    color: red;
+}
+#search_button{
+  width:23%;
+  height: 100%;
+  float: left;
+  margin: 0% 0% 1% 1%;
+}
+#search_button button{
   height: 50%;
-  width: 70%;
-  margin-top: 1%;
-  margin-left: 20%;
-  /*border:1px solid orange ;*/
-  overflow-y: scroll;
+  margin-top:7%;
+  margin-bottom: 7%;
+}
+#search_box label{
+    font-size: small;
+}
+#results {
+    height: 50%;
+    width: 70%;
+    margin-top: 0%;
+    margin-left: 20%;
+    /*border:1px solid orange ;*/
+    overflow-y: scroll;
 
 
+}
+#results label{
+    font-size: 90%;
 }
 #not_found_query{
     width:95%;
@@ -41,7 +104,7 @@ label{
 #table_of_books{
     /*border:2px solid yellow;*/
     width:95%;
-    height: 90%;
+    height: 97%;
     margin-left:5%;
 
 }
@@ -50,15 +113,15 @@ label{
     /*border:2px solid blue;*/
     width:100%;
     height:50%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
 
 }
 #table_of_books .column{
     /*border:2px solid green;*/
-    width: 32%;
+    width: 31%;
     height:100%;
     float: left;
-    margin-right: 1%;
+    margin-right: 2%;
 
 
 }
@@ -112,70 +175,15 @@ label{
     height: 15%;
     width: 100%;
     text-align: center;
+
 }
 .search_book{
     margin-top: 1%;
     border-radius: 24px;
     background-color: orange;
 }
-
-
-#up_box{
-  width:100%;
-  height: 50%;
-    margin-top: 1%;
-  /*border:2px solid green;*/
-
-}
-#down_box{
-  width:100%;
-  height: 50%;
-  /*border:2px solid blue;*/
-
-
-}
-
-
-
-.form-group{
-  width:23%;
-  float: left;
-  margin: 0% 1% 1% 1%;
-}
-.keyword{
-    width:90%;
-    margin-left: 5%;
-    margin-bottom: 2%;
-}
-.keyword_main{
-    width:90%;
-    margin-left: 5%;
-    margin-bottom: 2%;
-}
-
-#keywords_Autofill_div{
-  width:85%;
-  float: left;
-
-}
-
-#keywords_button_add{
-  width:15%;
-  float: left;
-
-}
-#keyword_required{
-    display: none;
-    color: red;
-}
-#search_button{
-  width:23%;
-  height: 100%;
-  float: left;
-  margin: 0% 0% 1% 1%;
-}
-#search_button button{
-  height: 50%;
-  margin-top:7%;
-  margin-bottom: 7%;
+#button_change{
+    text-align: center;
+    width: 24%;
+    margin-left: 1%;
 }
