--- a/assets/css/book_profile.css
+++ b/assets/css/book_profile.css
@@ -48,11 +48,12 @@
 }
 
 .big_img{
-  height: 91%;
+  height: 75%;
   width: 95%;
   right: 0px;
   margin-left: 5%;
   margin-top: 0%;
+  padding-top: 7%;
 }
 
 .big_img:hover {opacity: 0.7;}
