--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -1,18 +1,19 @@
 label{
   font-family: "Open Sans"; 
   font-weight: bold;
+    margin:0% 0% 0% 0%;
 }
 #main_search {
-  height: 100%;
+  height: 80%;
   width:80%;
   margin-left: 10%;
-  background: url(../images/main-search-3.png) no-repeat center bottom; 
+  background: url(../images/main-search-3.png) no-repeat center bottom;
   background-size: 95% 75% ;
 
 }
 #search_box{
   margin-top: 0%;
-  height: 22%;
+  height: 19%;
   width: 80%;
     margin-left:10%;
   /*position: absolute;*/
@@ -28,7 +29,6 @@ label{
 .box{
   width:100%;
   height: 50%;
-    margin-top: 1%;
   /*border:2px solid green;*/
 
 }
@@ -41,6 +41,7 @@ label{
   margin-right: 1%;
     margin-top: 0%;
     margin-bottom: 0%;
+    /*border:1px solid black;*/
 }
 .keyword{
     width:90%;
@@ -50,6 +51,7 @@ label{
 .keyword_main{
     width:90%;
     margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 2%;
 }
 
@@ -60,7 +62,8 @@ label{
 }
 
 #keywords_button_add{
-  width:15%;
+  width:14%;
+    margin-left: 1%;
   float: left;
 
 }
@@ -83,7 +86,7 @@ label{
     font-size: small;
 }
 #results {
-    height: 50%;
+    height: 53%;
     width: 70%;
     margin-top: 0%;
     margin-left: 20%;
@@ -94,6 +97,7 @@ label{
 }
 #results label{
     font-size: 90%;
+    font-weight: bold;
 }
 #not_found_query{
     width:95%;
@@ -122,7 +126,7 @@ label{
     width: 31%;
     height:100%;
     float: left;
-    margin-right: 2%;
+    margin-right: 1%;
 
 
 }
@@ -141,9 +145,10 @@ label{
 }
 #mark_image{
     /*border:2px solid blue;*/
-    height: 63%;
+    height: 60%;
     width: 50%;
     margin-left: 25%;
+    margin-top: 1%;
 }
 #image_area{
     /*border:2px solid grey;*/
@@ -166,8 +171,8 @@ label{
 
 .small_img{
     width: 100%;
-    height: 100%;
-    margin-bottom:5%;
+    height:100%;
+    margin-bottom:0%;
 
 }
 
@@ -187,4 +192,25 @@ label{
     text-align: center;
     width: 24%;
     margin-left: 1%;
+}
+.input-xs {
+     height: 22px;
+     padding: 2px 5px;
+     font-size: 12px;
+     line-height: 1.5; //If Placeholder of the input is moved up, rem/modify this.
+ border-radius: 3px;
+ }
+
+.btn-xxs {
+    height: 90%;
+}
+
+.modal-header{
+    background: url(../images/modal-header.png) no-repeat center bottom;
+    background-position:40% 40%;
+    background-color:white;
+    border-bottom: none;
+}
+#save_keywords{
+    border-color: orange;
 }
