--- a/assets/css/phylosophy.css
+++ b/assets/css/phylosophy.css
@@ -82,6 +82,7 @@
   	background: url(../images/comming.png) no-repeat center top;
   	background-size: 90% 100% ;
   	border: 1px solid rgba(1, 1, 255, 0);
+
 }
 
 #comingsoon_area{
@@ -92,6 +93,8 @@
 	/*border: 3px solid black;*/
 	/*overflow-y: scroll;*/
 	padding-right: 5px;
+    float: left;
+
 }
 
 
