--- a/assets/css/phylosophy.css
+++ b/assets/css/phylosophy.css
@@ -23,24 +23,24 @@
 #contact-info-area{
 	float: left;
 	height: 100%;
-	width: 20%;
-	margin-left: 4%;
+	width: 13%;
+	margin-left: 19%;
+  margin-top: -1%;
 }
 
 #contact-info-area-div{
-	width: 80%;
-	height: 20%;
-	margin-left: 5%;
-	margin-top: 30%;
-	background: url(../images/dialog-zavo.png) no-repeat center center;
-	background-size: 80% 100%;
+	width: 100%;
+	height: 7%;
+	/*margin-left: 5%;*/
+	/*margin-top: 30%;*/
+	background: url(../images/dialog.png) no-repeat center center;
+	background-size: 100% 100%;
 	text-align: center;
 }
 
 #contact-info-area-div p {
-	padding-top: 20%;
-	padding-left: 15%;
-	padding-right: 15%;
+	padding-top: 5%;
+	font-size: 11px;
 }
 
 #main_blog{
