--- a/assets/css/phylosophy.css
+++ b/assets/css/phylosophy.css
@@ -31,14 +31,14 @@
 	width: 80%;
 	height: 20%;
 	margin-left: 5%;
-	margin-top: 30%;
+	margin-top: 0%;
 	background: url(../images/dialog-zavo.png) no-repeat center center;
 	background-size: 80% 100%;
 	text-align: center;
 }
 
 #contact-info-area-div p {
-	padding-top: 20%;
+	padding-top: 10%;
 	padding-left: 15%;
 	padding-right: 15%;
 }
@@ -49,15 +49,16 @@
   	margin-top: 0%;
   	margin-left: 10%;
   	background: url(../images/blog-1.png) no-repeat center top;
-  	background-size: 90% 100% ;
-  	border: 1px solid rgba(1, 1, 255, 0);
+  	background-size: 90% 90% ;
+  	background-position: 45% 100% ;
+  	/*border: 1px solid red;*/
 }
 
 #blog_area{
 	height: 50%;
-	width: 31%;
-	margin-top: 7%;
-	margin-left: 35%;
+	width: 40%;
+	margin-top: 3%;
+	margin-left: 30%;
 	/*border: 3px solid black;*/
 	overflow-y: scroll;
 	padding-right: 5px;
@@ -223,4 +224,12 @@
     .my-modal-content {
         width: 100%;
     }
+}
+
+#search_bar_div{
+	height:85% ;
+	width:80% ;
+	margin-left: 10%;
+	margin-right: 10%;
+	/*border:1px solid red;*/
 }
