--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -417,7 +417,7 @@ cursor: hand;
   margin-left: 0px;
   margin-right: 0px;
   /*border:1px solid orange ; */
-  background: url(../images/book-2.png) no-repeat center;
+  background: url(../images/book-2-2.png) no-repeat center;
   background-size: 100% 100%;  
 
 }
