--- a/admin/assets/css/main.css
+++ b/admin/assets/css/main.css
@@ -4052,3 +4052,26 @@ section h2 {
 	 background-color: rgb(135, 212, 255);
 	border-radius: 24px;
  }
+#gallery_table{
+	width:100%;
+	height: 100%;
+	overflow-y: scroll;
+}
+#gallery_table table td {
+	border: 4px solid #9aa0a2;
+	width: 25%;
+	height: 50%;
+}
+#gallery_table table #photo{
+	width:100%;
+	height: 80%;
+	text-align: center;
+}
+#gallery_table table #delete_button{
+	width:100%;
+	height: 20%;
+	text-align: center;
+}
+#gallery_table table tr:hover{
+	background-color: transparent;
+}
